<resources>
    <string name="app_name">WayTO-Navigation</string>
    <string name="action_settings">Settings</string>
    <string name="accessToken">pk.eyJ1Ijoic2NodW1pOTEiLCJhIjoiY2lsZ294Mmc2MDA1ZHZrbTR3aHd2NnhqbSJ9.YPm4QaT1_13qooe7XLBovA</string>
    <string name="action_settings_menu">Settings</string>
    <string name="action_destination">Destination</string>
    <string name="action_info">Info</string>
    <string name="inline_visualization_type">Visualization Type</string>
    <string name="title_visualization_type_preference">Select Visualization</string>
    <string name="dialog_visualization_type_list_preference">Select Visualization</string>
    <string name="inline_miscellaneous">Miscellaneous</string>
    <string name="simulate_route">Simulate Route</string>
    <string name="landmark_location_preference">Select Landmark Set</string>
    <string name="dialog_landmark_location_preference">Landmark Set</string>
</resources>
