<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/inline_visualization_type">

        <ListPreference
            android:key="checkbox_visualization_type_preference"
            android:title="@string/title_visualization_type_preference"
            android:entries="@array/entries_visualization_type_preference"
            android:entryValues="@array/entryvalues_visualization_type_preference"
            android:dialogTitle="@string/dialog_visualization_type_list_preference"
            android:defaultValue="3"/>


    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/inline_miscellaneous">
        <CheckBoxPreference
            android:key="checkbox_simulation"
            android:title="@string/simulate_route"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Landmarks">
        <ListPreference
            android:key="landmark_location_preference"
            android:title="@string/landmark_location_preference"
            android:entries="@array/entries_landmark_location_preference"
            android:entryValues="@array/entryvalues_visualization_type_preference"
            android:dialogTitle="@string/dialog_landmark_location_preference"
            android:defaultValue="0"/>
    </PreferenceCategory>


</PreferenceScreen>