<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:WayTO-Navigation="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_destination"
        android:icon="@drawable/destination_menu_icon"
        android:title="@string/action_destination"
        WayTO-Navigation:showAsAction="ifRoom"/>
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_black_48dp"
        WayTO-Navigation:showAsAction="ifRoom"/>
    <item android:id="@+id/action_info"
        android:title="@string/action_info"
        android:icon="@drawable/ic_info_black_48dp"
        WayTO-Navigation:showAsAction="ifRoom"/>
</menu>